--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,11 @@ minimal: true             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md", icon: home, title: Home}
-  # - {file: "README.md"}
+  - {file: "publications.md", title: "Publications", icon: pen}
+  # - {file: "Lectures.md", title: "Talks & Lectures", icon: comments}
+  # - {file: "Teaching.md", title: "Teaching", icon: chalkboard}
+  # - {file: "Service.md", title: "Service", icon: building}
+  # - {file: "Projects.md", title: "Projects", icon: folder}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:anastassia.shaitarova@uzh.ch"}
