--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,10 @@ minimal: true             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md", icon: home, title: Home}
+  - {url: "/talks/", title: "Talks & Lectures", icon: comments}
   - {file: "publications.md", title: "Publications", icon: pen}
-  # - {file: "Lectures.md", title: "Talks & Lectures", icon: comments}
+
+  # - {file: "talks.md", title: "Talks & Lectures", icon: comments}
   # - {file: "Teaching.md", title: "Teaching", icon: chalkboard}
   # - {file: "Service.md", title: "Service", icon: building}
   # - {file: "Projects.md", title: "Projects", icon: folder}
